# langchain-pgvector

./: .pre-commit-config.yaml  README.md  docker-compose.yaml  main.py  pyproject.toml
docs/: ให้บุญนำพา.txt
migrations/: atlas.sum  schema.hcl  scheme.sql
