[project]
name = "langchain-pgvector"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "dotenv>=0.9.9",
    "langchain>=0.3.21",
    "langchain-community>=0.3.20",
    "langchain-ollama>=0.3.0",
    "langchain-openai>=0.3.9",
    "langchain-postgres>=0.0.13",
]
